--- a/app/globals.css
+++ b/app/globals.css
@@ -5,6 +5,7 @@
 
 @theme inline {
   --color-background: var(--background);
+  --color-mycolor: oklch(69.8% 0.128 259);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
@@ -44,6 +45,7 @@
 }
 
 :root {
+  --mycolor: oklch(69.8% 0.128 259);
   --radius: 0.625rem;
   --background: oklch(1 0 0);
   --foreground: oklch(0.145 0 0);
@@ -79,6 +81,7 @@
 }
 
 .dark {
+  --font-poppins: var(--font-poppins);
   --background: oklch(0.145 0 0);
   --foreground: oklch(0.985 0 0);
   --card: oklch(0.205 0 0);
@@ -110,13 +113,13 @@
   --sidebar-accent-foreground: oklch(0.985 0 0);
   --sidebar-border: oklch(1 0 0 / 10%);
   --sidebar-ring: oklch(0.556 0 0);
-}
 
-@layer base {
-  * {
-    @apply border-border outline-ring/50;
-  }
-  body {
-    @apply bg-background text-foreground;
+  @layer base {
+    * {
+      @apply border-border outline-ring/50;
+    }
+    body {
+      @apply bg-background text-foreground;
+    }
   }
 }
